--- a/src/components/hero-banner/HeroBanner.scss
+++ b/src/components/hero-banner/HeroBanner.scss
@@ -1,4 +1,4 @@
-@use "../../styles/partials/fonts";
+@use '../../styles/partials/fonts';
 
 html,
 body {
@@ -6,7 +6,7 @@ body {
   padding: 0;
   height: 100%;
   width: 100%;
-  font-family: "Electronic Arts Text";
+  font-family: 'Electronic Arts Text';
   box-sizing: border-box;
 }
 
@@ -15,6 +15,7 @@ body {
   box-sizing: border-box;
   align-items: center;
   width: 100%;
+  height: 75vh;
   padding: 3rem 8rem;
   background: rgba(0, 0, 0, 0.8);
 
@@ -43,7 +44,7 @@ body {
   .button {
     padding: 1rem;
     outline: none;
-    font-family: "Electronic Arts Text";
+    font-family: 'Electronic Arts Text';
     font-size: 1rem;
     border-radius: 0.25rem;
     background-color: #ff4747;
