--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -18,6 +18,8 @@
     width: 100%;
     border-radius: 10px;
     background-color: aquamarine;
+    object-fit: cover;
+    overflow: hidden;
   }
 }
 
