--- a/src/components/nav-bar/NavBar.scss
+++ b/src/components/nav-bar/NavBar.scss
@@ -1,4 +1,4 @@
-@use '../../styles/partials/fonts';
+@use "../../styles/partials/fonts";
 
 html,
 body {
@@ -6,7 +6,7 @@ body {
   padding: 0;
   height: 100%;
   width: 100%;
-  font-family: 'Electronic Arts Text';
+  font-family: "Electronic Arts Text";
   box-sizing: border-box;
 }
 
@@ -16,10 +16,9 @@ body {
   justify-content: space-between;
   padding: 0rem 3rem;
   width: 100%;
-  height: 10vh;
+  height: 4rem;
 
   &__logo {
-    width: 3rem;
     height: 3rem;
     align-self: center;
   }
@@ -28,7 +27,7 @@ body {
     padding: 1rem;
     border: none;
     outline: none;
-    font-family: 'Electronic Arts Text';
+    font-family: "Electronic Arts Text";
     font-weight: 700;
     font-size: 1rem;
     border-radius: 0.25rem;
