add windows logo and add new header section

--- a/src/components/nav-bar/NavBar.scss
+++ b/src/components/nav-bar/NavBar.scss
@@ -12,6 +12,7 @@ body {
 
 .nav {
   display: flex;
+  background-color: white;
   box-sizing: border-box;
   justify-content: space-between;
   padding: 0rem 3rem;
