--- a/src/components/hero-banner/HeroBanner.scss
+++ b/src/components/hero-banner/HeroBanner.scss
@@ -1,5 +1,5 @@
-@use "../../styles/partials/fonts";
-@use "../../styles/partials/colors" as *;
+@use '../../styles/partials/fonts';
+@use '../../styles/partials/colors' as *;
 
 @keyframes placeHolderShimmer {
   0% {
@@ -17,7 +17,12 @@
   width: 100%;
   height: 75vh;
   padding: 3rem 8rem;
-  background-image: linear-gradient(to right, $EANavy 0%, $EANavy 45%, $EAMaroon);
+  background-image: linear-gradient(
+    to right,
+    $EANavy 0%,
+    $EANavy 45%,
+    $EAMaroon
+  );
 
   &__text {
     color: white;
@@ -46,7 +51,7 @@
   .button {
     padding: 1rem;
     outline: none;
-    font-family: "Electronic Arts Text";
+    font-family: 'Electronic Arts Text';
     font-size: 1rem;
     border-radius: 0.25rem;
     border: none;
