--- a/src/components/graphicsSection/GraphicsSection.scss
+++ b/src/components/graphicsSection/GraphicsSection.scss
@@ -8,7 +8,8 @@
   &__subheader {
     padding-top: 1.5rem;
     margin: 0;
-    font-size: 3rem;
+    font-size: 2rem;
+    color: white;
     &--up {
       transition: transform 400ms ease-in;
       transform: translateY(0);
@@ -22,8 +23,7 @@
     display: flex;
     flex-direction: column;
     padding-bottom: 2rem;
-    position: relative;
-    z-index: -9999;
+
     align-items: center;
   }
   &__image-container {
@@ -37,7 +37,7 @@
       transform: translateY(0);
     }
     &--down {
-      transform: translateY(50%);
+      transform: translateY(15%);
       transition: transform 400ms ease-in;
       visibility: hidden;
     }
@@ -53,13 +53,13 @@
     margin: 0;
     font-size: 18px;
     line-height: 27px;
-
+    color: white;
     &--up {
       transition: transform 400ms ease-in;
       transform: translateY(0);
     }
     &--down {
-      transform: translateY(50%);
+      transform: translateY(15%);
       transition: transform 500ms ease-in;
       visibility: hidden;
     }
