--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -1,14 +1,12 @@
 .carousel-container {
-  height: 25vh;
   padding: 1rem 1rem 1rem 1rem;
 }
 
-
 .carousel {
   display: grid;
-  height: 100%;
+  height: 320px;
   grid-auto-flow: column;
-  grid-auto-columns: 13%;
+  grid-auto-columns: 15%;
   overflow-x: auto;
   overscroll-behavior-inline: contain;
   gap: 2rem;
