--- a/src/components/CarouselItem/CarouselItem.scss
+++ b/src/components/CarouselItem/CarouselItem.scss
@@ -5,7 +5,7 @@
 
   &__img {
     height: 100%;
-    width: 100%;
+    max-width: 100%;
     border-radius: 10px;
     object-fit: cover;
     cursor: pointer;
