--- a/src/components/hero-banner/HeroBanner.scss
+++ b/src/components/hero-banner/HeroBanner.scss
@@ -15,7 +15,7 @@
   align-items: center;
 
   margin: 5rem 0rem;
-  margin-bottom: 15rem;
+  margin-bottom: 10rem;
   width: 100%;
   height: 65vh;
   padding: 3rem 8rem;
@@ -41,8 +41,12 @@
   }
 
   &__image {
-    width: 100%;
-    height: 100%;
+    margin-top: 2.5rem;
+    margin-left: 2rem;
+    margin-bottom: 1rem;
+    max-width: 100%;
+    max-height: 100%;
+    transform: scale(1.2);
     object-fit: cover;
     overflow: hidden;
     &-container {
