added response drop down

--- a/src/components/FaqItem/FaqItem.scss
+++ b/src/components/FaqItem/FaqItem.scss
@@ -1,5 +1,10 @@
 @use '../../styles/partials/colors' as *;
 
+.faq-item-row {
+  display: flex;
+  flex-direction: column;
+}
+
 .faq-item {
   width: 100%;
   height: 116px;
@@ -11,6 +16,57 @@
   padding-right: 2rem;
   align-items: center;
   margin-bottom: 2rem;
+  cursor: pointer;
+
+  p {
+    color: white;
+    font-size: 18px;
+  }
+
+  &__dropdown-icon {
+    height: 2rem;
+    width: 2rem;
+  }
+}
+
+.faq-item-response {
+  width: 100%;
+  height: 116px;
+  border-radius: 20px;
+  background-color: $EADarkblue;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  align-items: center;
+  margin-bottom: 2rem;
+  margin-top: -1.5rem;
+  cursor: pointer;
+  display: none;
+
+  p {
+    color: white;
+    font-size: 18px;
+  }
+
+  &__dropdown-icon {
+    height: 2rem;
+    width: 2rem;
+  }
+}
+
+.faq-item-response--open {
+  width: 100%;
+  height: 116px;
+  border-radius: 20px;
+  background-color: $EADarkblue;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  align-items: center;
+  margin-bottom: 2rem;
+  margin-top: -1.5rem;
   cursor: pointer;
 
   p {
