added response dropdown

--- a/src/components/FaqItem/FaqItem.scss
+++ b/src/components/FaqItem/FaqItem.scss
@@ -59,7 +59,7 @@
   width: 100%;
   height: 116px;
   border-radius: 20px;
-  background-color: $EADarkblue;
+  background-color: $EAOrange;
   display: flex;
   justify-content: space-between;
   padding-left: 2rem;
