started on responsive design and connected to backend to populate images and faq

--- a/src/components/FaqItem/FaqItem.scss
+++ b/src/components/FaqItem/FaqItem.scss
@@ -3,6 +3,7 @@
 .faq-item-row {
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
 .faq-item {
@@ -12,8 +13,6 @@
   background-color: $EADarkblue;
   display: flex;
   justify-content: space-between;
-  padding-left: 2rem;
-  padding-right: 2rem;
   align-items: center;
   margin-bottom: 2rem;
   cursor: pointer;
@@ -26,44 +25,25 @@
   &__dropdown-icon {
     height: 2rem;
     width: 2rem;
+    padding-right: 2rem;
+  }
+
+  &__question {
+    padding-left: 2rem;
   }
 }
 
 .faq-item-response {
-  width: 100%;
-  height: 116px;
-  border-radius: 20px;
-  background-color: $EADarkblue;
-  display: flex;
-  justify-content: space-between;
-  padding-left: 2rem;
-  padding-right: 2rem;
-  align-items: center;
-  margin-bottom: 2rem;
-  margin-top: -1.5rem;
-  cursor: pointer;
   display: none;
-
-  p {
-    color: white;
-    font-size: 18px;
-  }
-
-  &__dropdown-icon {
-    height: 2rem;
-    width: 2rem;
-  }
 }
 
 .faq-item-response--open {
   width: 100%;
-  height: 116px;
+  min-height: 116px;
   border-radius: 20px;
   background-color: $EAOrange;
   display: flex;
   justify-content: space-between;
-  padding-left: 2rem;
-  padding-right: 2rem;
   align-items: center;
   margin-bottom: 2rem;
   margin-top: -1.5rem;
@@ -77,5 +57,10 @@
   &__dropdown-icon {
     height: 2rem;
     width: 2rem;
+    padding-right: 2rem;
+  }
+
+  &__question {
+    padding-left: 2rem;
   }
 }
