--- a/src/components/faq/Faq.scss
+++ b/src/components/faq/Faq.scss
@@ -1,11 +1,9 @@
-@use "../../styles/partials/colors" as *;
+@use '../../styles/partials/colors' as *;
 
 .faq {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-left: 200px;
-  padding-right: 200px;
 
   &__download-btn {
     height: 101px;
@@ -47,7 +45,7 @@
   &__item-list {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 70%;
     margin-top: 5rem;
   }
 }
