--- a/src/components/graphicsSection/GraphicsSection.scss
+++ b/src/components/graphicsSection/GraphicsSection.scss
@@ -1,5 +1,4 @@
 .graphics {
-  margin: 8.5rem 25rem 7rem;
   &__container {
     display: flex;
     flex-direction: column;
@@ -45,8 +44,8 @@
     }
   }
   &__image {
-    height: 22.188rem;
-    width: 44.625rem;
+    height: 25%;
+    width: 100%;
     margin: 0;
     border-radius: 1.25rem;
   }
