--- a/src/components/nav-bar/NavBar.scss
+++ b/src/components/nav-bar/NavBar.scss
@@ -1,35 +1,34 @@
-@use "../../styles/partials/fonts";
-
+@use '../../styles/partials/fonts';
+@use '../../styles/partials/breakpoints' as *;
 html,
 body {
   margin: 0;
   padding: 0;
   height: 100%;
   width: 100%;
-  font-family: "Electronic Arts Text";
+  font-family: 'Electronic Arts Text';
   box-sizing: border-box;
-  overflow-x: hidden;
 }
 
 .nav {
   display: flex;
   position: fixed;
   top: 80px;
-  overflow: hidden;
+  left: 0;
   background-color: white;
   box-sizing: border-box;
   justify-content: space-between;
-  width: 99.2%;
+  width: 100%;
   height: 4rem;
   transition-duration: 0.4s;
 
   &--fixed {
     transform: translate3d(0, -80px, 0);
-    z-index: 100;
+    z-index: 1;
   }
 
   &__logo {
-    height: 3rem;
+    height: 2.5rem;
     align-self: center;
     padding-right: 1.5rem;
     padding-top: 0.5rem;
@@ -47,35 +46,43 @@ body {
     padding: 0rem 3rem;
   }
 
-  // &__button {
-  //   padding: 1rem;
-  //   border: none;
-  //   outline: none;
-  //   font-family: "Electronic Arts Text";
-  //   font-weight: 700;
-  //   font-size: 1rem;
-  //   border-radius: 0.25rem;
-  //   background-color: white;
-  //   color: white;
-  //   height: 100%;
-  //   border: 1px solid white;
-  //   background-color: inherit;
-  //   width: 145px;
-  //   height: 54px;
-  //   font-size: 18px;
-  //   line-height: 27px;
-  //   margin-left: 1rem;
-  //   &:hover {
-  //     color: white;
-  //     background-color: black;
-  //   }
-  // }
-
   &__text {
     color: black;
     padding-right: 1rem;
     display: flex;
     align-items: center;
     cursor: pointer;
+  }
+
+  &__ham-icon {
+    padding-right: 1rem;
+    cursor: pointer;
+  }
+}
+
+@include small() {
+  .nav {
+    &__text {
+      display: none;
+    }
+  }
+}
+
+@include medium() {
+  .nav {
+    &__text {
+      display: none;
+    }
+  }
+}
+
+@include large() {
+  .nav {
+    &__ham-icon {
+      display: none;
+    }
+    &__text {
+      display: block;
+    }
   }
 }
