--- a/src/pages/HomePage.scss
+++ b/src/pages/HomePage.scss
@@ -1,8 +1,20 @@
-@use "../styles/partials/fonts" as *;
-@use "../styles/partials/colors" as *;
+@use '../styles/partials/fonts' as *;
+@use '../styles/partials/colors' as *;
 
 .home {
-  background-image: linear-gradient(to right, $EANavy 0%, $EANavy 45%, $EAMaroon);
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  background-image: linear-gradient(
+    to right,
+    $EANavy 0%,
+    $EANavy 45%,
+    $EAMaroon
+  );
+
+  &__nav {
+    overflow-x: hidden;
+  }
 }
 
 .footer {
