--- a/src/components/CarouselItem/CarouselItem.scss
+++ b/src/components/CarouselItem/CarouselItem.scss
@@ -1,11 +1,18 @@
 .carousel-item {
-  height: 100%;
-  width: 100%;
-  cursor: pointer;
+  height: auto;
+  max-width: 400px;
+  overflow-y: hidden;
+
+  &__container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+  }
 
   &__img {
     height: 100%;
-    max-width: 100%;
+    width: 100%;
     border-radius: 10px;
     object-fit: cover;
     cursor: pointer;
