--- a/src/components/faq/Faq.scss
+++ b/src/components/faq/Faq.scss
@@ -1,4 +1,5 @@
 @use '../../styles/partials/colors' as *;
+@use '../../styles/partials/breakpoints' as *;
 
 .faq {
   display: flex;
@@ -47,5 +48,28 @@
     flex-direction: column;
     width: 70%;
     margin-top: 5rem;
+  }
+}
+
+@include small() {
+  .faq {
+    &__header {
+      font-size: 1.5rem;
+      padding-left: 2rem;
+      padding-right: 2rem;
+      text-align: center;
+    }
+
+    &__item-list {
+      width: 90%;
+    }
+  }
+}
+
+@include medium() {
+  .faq {
+    &__item-list {
+      width: 85%;
+    }
   }
 }
