--- a/src/components/hero-banner/HeroBanner.scss
+++ b/src/components/hero-banner/HeroBanner.scss
@@ -1,5 +1,6 @@
-@use "../../styles/partials/fonts";
-@use "../../styles/partials/colors" as *;
+@use '../../styles/partials/fonts';
+@use '../../styles/partials/colors' as *;
+@use '../../styles/partials/breakpoints' as *;
 
 @keyframes placeHolderShimmer {
   0% {
@@ -13,21 +14,23 @@
 .hero {
   box-sizing: border-box;
   align-items: center;
-
-  margin: 5rem 0rem;
-  margin-bottom: 10rem;
   width: 100%;
-  height: 65vh;
-  padding: 3rem 8rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &--right {
+    padding-top: 2rem;
+  }
 
   &__top {
     width: 100%;
-    display: flex;
+    max-width: 1400px;
+    display: grid;
   }
   &__text {
     color: white;
     padding-top: 3rem;
-    margin-right: 10rem;
     line-height: normal;
   }
 
@@ -41,38 +44,37 @@
   }
 
   &__image {
-    margin-top: 2.5rem;
-    margin-left: 2rem;
     margin-bottom: 1rem;
     max-width: 100%;
     max-height: 100%;
-    transform: scale(1.2);
+    height: auto;
     object-fit: cover;
-    overflow: hidden;
-    &-container {
-    }
   }
 
   &__carousel-text {
     margin-top: 4rem;
-    width: 100%;
     color: white;
     display: flex;
-    justify-content: center;
-    text-align: center;
     flex-direction: column;
+    align-items: center;
+  }
+
+  &__carousel-title {
+    font-size: 48px;
+    line-height: normal;
   }
 
   &__subtext {
-    margin: 0rem 32rem;
     font-size: 1rem;
+    width: 40%;
+    text-align: center;
   }
 
   .button {
     position: relative;
     padding: 0.75rem 3.25rem 0.75rem 1rem;
     outline: none;
-    font-family: "Electronic Arts Text";
+    font-family: 'Electronic Arts Text';
     font-size: 1rem;
     border-radius: 0.25rem;
     border: none;
@@ -94,5 +96,79 @@
     }
 
     margin-right: 1rem;
+  }
+}
+
+@include small() {
+  .hero {
+    padding: 5rem 3rem 0rem 3rem;
+
+    &__text {
+      padding-top: 0rem;
+    }
+
+    &__top {
+      grid-template-columns: 1fr;
+    }
+
+    &--left {
+      order: 2;
+    }
+
+    &--right {
+      order: 1;
+    }
+    &__title {
+      font-size: 2rem;
+    }
+
+    &__subtitle {
+      font-size: 1rem;
+    }
+
+    &__carousel-text {
+      align-items: flex-start;
+    }
+
+    &__carousel-title {
+      font-size: 2rem;
+    }
+
+    &__subtext {
+      width: 100%;
+      font-size: 1rem;
+      text-align: left;
+    }
+  }
+}
+@include medium() {
+  .hero {
+    padding: 10rem 6rem 2rem 6rem;
+
+    &__top {
+      grid-template-columns: 1fr 1fr;
+      column-gap: 3rem;
+    }
+
+    &__title {
+      font-size: 2rem;
+    }
+
+    &__subtitle {
+      font-size: 1rem;
+    }
+
+    &__subtext {
+      width: 70%;
+    }
+  }
+}
+@include large() {
+  .hero {
+    padding: 10rem 6rem 2rem 6rem;
+
+    &__top {
+      grid-template-columns: 1fr 1fr;
+    }
   }
 }
