--- a/src/components/nav-bar/Header.scss
+++ b/src/components/nav-bar/Header.scss
@@ -1,5 +1,6 @@
 @use '../../styles/partials/fonts' as *;
 @use '../../styles/partials/colors' as *;
+@use '../../styles/partials/breakpoints' as *;
 
 .header {
   display: flex;
@@ -39,7 +40,16 @@
   &__accessibility-icon {
     cursor: pointer;
     object-fit: cover;
-    overflow: hidden;
+
     height: 2rem;
+  }
+}
+
+@include small() {
+  .header {
+    padding: 1rem 1rem;
+    &__button {
+      font-size: 0.875rem;
+    }
   }
 }
