--- a/src/components/nav-bar/NavBar.scss
+++ b/src/components/nav-bar/NavBar.scss
@@ -19,7 +19,7 @@ body {
   box-sizing: border-box;
   justify-content: space-between;
   width: 100%;
-  height: 4rem;
+  min-height: 4rem;
   transition-duration: 0.4s;
 
   &--fixed {
@@ -66,6 +66,8 @@ body {
 
 @include small() {
   .nav {
+    padding-top: 2rem;
+    padding-bottom: 1rem;
     &__drop-down-container {
       padding: 0rem 1rem;
     }
